fixed up the dates text spacing

--- a/static/styles/custom.css
+++ b/static/styles/custom.css
@@ -45,7 +45,7 @@
 
 .event-img {
     width: 18rem;
-    height: auto;
+    max-height: 18rem;
 }
 
 .event-text {
